# kubetimer

./: .flake8  Dockerfile  Makefile  README.md  deploy.sh  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
deploy/: METRICS.md  deployment.yaml  example-config.yaml  grafana-dashboard-configmap.yaml  rbac.yaml  service.yaml  servicemonitor.yaml
kubetimer/: __init__.py  main.py
kubetimer/config/: k8s.py  settings.py
kubetimer/handlers/: __init__.py  deployment.py  registry.py  timer.py
kubetimer/metrics/: __init__.py  decorators.py  instruments.py
kubetimer/reconcile/: bulk_delete.py  fetcher.py  models.py  orchestrator.py
kubetimer/scheduler/: __init__.py  jobs.py
kubetimer/utils/: __init__.py  actions.py  logs.py  namespace.py  time_utils.py
tests/: cleanup_zombies.py  conftest.py  experiment.py  export_metrics.py  generate_load.py  generate_zombies.py  measure.py  monitor_logs.py  monitor_resources.py  victim.yaml
tests/results/: analysis.ipynb  experiment_20260323_193128_with_pods.csv  experiment_20260323_193128_with_pods.json  experiment_20260323_202809_zero_replicas.csv  experiment_20260323_202809_zero_replicas.json
tests/unit/: test_bulk_delete.py  test_deployment_handlers.py  test_fetcher.py  test_jobs.py  test_lifecycle.py  test_metrics.py  test_namespace.py  test_orchestrator.py  test_registry.py  test_settings.py  test_time_utils.py
